2004-07-03  MenTaLguY  <mental@rydia.net>

	* src/desktop.cpp, src/document.cpp: 

	  siblings of a layer now become layers too

	* src/interface.cpp: switched to command names suggested by bulia

	* src/object-hierarchy.cpp, src/object-hierarchy.h:

	  bugfixes and cleanups
	
	* src/sp-item-group.cpp, src/sp-item-group.h, src/sp-root.cpp:

	  new layerMode() and setLayerMode() methods; SPGroupMode becomes
	  SPGroup::LayerMode

	* src/sp-object.h: added isSiblingOf() method

	* src/sp-object.cpp: leave parent pointer in place until after
	  "release" handlers finish

2004-07-02  Kees Cook  <kees@outflux.net>

	* src/document.cpp, src/dialogs/desktop-properties.cpp, 
	  src/dialogs/rdf.cpp, src/dialogs/rdf.h, src/xml/repr.h:
	  Made RDF's writable now.  Handling modifications and defaults.
	  Mental and others will most likely kill me when they finally
	  read this code.

2004-07-02  MenTaLguY  <mental@rydia.net>

	* src/attributes.cpp, src/attributes.h, src/sp-item-group.cpp,
	  src/sp-item-group.h:

	  Removed the "inkscape:groupmode" attribute and added note about how
	  the group/layer mode setting needs to be per-view, not global.

	* src/desktop.cpp, src/desktop.h,
	  src/object-hierarchy.cpp, src/object-hierarchy.h:

	  Added notification signals for switching layers, as well as putting
	  groups in layer mode when they are being used as layers.

	  Notably, you can now call SPDesktop::connectCurrentLayerChanged() to
	  connect to a SigC++ signal to be notified when the current layer
	  changes.

	* src/interface.cpp, src/object-ui.cpp:

	  Fixed up the "Enter Group" and "Leave Group" context menu
	  commands a bit, and implement them both in the same places.

2004-07-02  Carl Hetherington  <inkscape@carlh.net>

	* src/desktop-snap.cpp, src/desktop-snap.h, src/snap.cpp,
	src/snap.h, src/Makefile_insert src/arc-context.cpp src/draw-context.cpp
        src/dyna-draw-context.cpp src/make.dep src/make.files src/make.ofiles