@@ -1,10 +1,14 @@
 #ifndef _RDF_H_
 #define _RDF_H_
 
-#include <config.h>
+#ifdef HAVE_CONFIG_H
+# include <config.h>
+#endif
+
 #include <glib.h>
 
 #include "helper/sp-intl.h"
+#include "document.h"
 
 /**
  * \brief Holds license name and RDF information
@@ -30,7 +34,9 @@ struct rdf_work_entity_t {
     char   *name;       /* unique name of this entity for internal reference */
     gchar  *title;      /* localized name of this entity for data entry labels */
     gchar  *tag;        /* namespace tag for the RDF/Work element */
-    RDFType datatype;  /* how to extract/inject the RDF information */
+    RDFType datatype;   /* how to extract/inject the RDF information */
+    gchar  *tip;        /* tool tip to explain the meaning of the entity */
+    bool    interactive;/* is this a directly editable entity? */
 };
 
 extern rdf_work_entity_t rdf_work_entities [];
@@ -51,7 +57,7 @@ struct rdf_t {
     struct rdf_license_t* license;
 };
 
-struct rdf_work_entity_t * rdf_find_entity(char * name);
+struct rdf_work_entity_t * rdf_find_entity(gchar const * name);
 
 const gchar * rdf_get_work_entity(SPDocument * doc,
                                   struct rdf_work_entity_t * entity);
@@ -61,6 +67,8 @@ unsigned int  rdf_set_work_entity(SPDocument * doc,
 
 struct rdf_license_t * rdf_get_license();
 void                   rdf_set_license(struct rdf_license_t * license);
+
+void rdf_set_defaults ( SPDocument * document );
 
 #endif // _RDF_H_
 
